search-service/main/default/objects/Search_Component_Object_Setting__mdt/Search_Component_Object_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Search Component Object Setting</label>
    <pluralLabel>Search Component Object Settings</pluralLabel>
</CustomObject>