search-service/main/default/objects/Search_Component_Object_Setting__mdt/fields/Display_Icon__c.field-meta.xml
<CustomField>
    <fullName>Display_Icon__c</fullName>
    <description
  >icon name from slds icons list, e.g: standard:account</description>
    <label>Display Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>