search-service/main/default/objects/Search_Component_Object_Setting__mdt/fields/Parent_Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Field_API_Name__c</fullName>
    <inlineHelpText>The field api name of object hierarchy.</inlineHelpText>
    <label>Parent Lookup Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>