search-service/main/default/objects/Search_Component_Object_Setting__mdt/fields/SObject_Label__c.field-meta.xml
<CustomField>
    <fullName>SObject_Label__c</fullName>
    <label>SObject Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>